--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <!-- displays site properly based on user's device -->
 
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
   <link rel="stylesheet" type="text/css" href="style.css">
@@ -27,15 +26,14 @@
             href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
           <div class="topnav" id="myTopnav">
-            <img src="images/logo.svg" class="logoTop">
+            <img src="images/logo.svg" class="logoTop" alt="Loopstudios logo">
             <a href="#about">About</a>
             <a href="#careers">Careers</a>
             <a href="#events">Events</a>
             <a href="#products">Products</a>
             <a href="#support">Support</a>
             <a href="javascript:void(0);" class="icon" onclick="myFunction()">
-              <!-- <i class="fa fa-bars"></i> -->
-              <img id="iconHamburger" src="images/icon-hamburger.svg">
+              <img id="iconHamburger" src="images/icon-hamburger.svg" alt="menu icon">
             </a>
           </div>
         </div>
@@ -49,7 +47,7 @@
     <main>
       <div class="about">
         <div>
-          <img class="imgInteractive" src="images/desktop/image-interactive.jpg">
+          <img class="imgInteractive" src="images/desktop/image-interactive.jpg" alt="Man using vr glasses">
         </div>
         <div class="aboutUs">
           <h2 class="title">The leader in interactive VR</h2>
@@ -63,11 +61,8 @@
 
       <div class="ourCreations">
         <h2 class="ourCreationsTitle">Our creations</h2>
-        <!-- <div class="creations"> -->
         <a href="#" class="item1">
-          <!-- <div> -->
           <h3>Deep earth</h3>
-          <!-- </div> -->
         </a>
         <a href="#" class="item2">
           <div>
@@ -105,7 +100,6 @@
           </div>
         </a>
         <a href="#" class="btnSeeAll">See all</a>
-        <!-- </div> -->
       </div>
     </main>
     <footer>
@@ -136,7 +130,7 @@
     </footer>
   </div>
 
-  <script src="script.js" type="text/javascript"></script>
+  <script src="script.js"></script>
 </body>
 
 </html>
