--- a/index.html
+++ b/index.html
@@ -27,11 +27,11 @@
 
           <div class="topnav" id="myTopnav">
             <img src="images/logo.svg" class="logoTop" alt="Loopstudios logo">
-            <a href="#about">About</a>
-            <a href="#careers">Careers</a>
-            <a href="#events">Events</a>
-            <a href="#products">Products</a>
-            <a href="#support">Support</a>
+            <a href="#">About</a>
+            <a href="#">Careers</a>
+            <a href="#">Events</a>
+            <a href="#">Products</a>
+            <a href="#">Support</a>
             <a href="javascript:void(0);" class="icon" onclick="myFunction()">
               <img id="iconHamburger" src="images/icon-hamburger.svg" alt="menu icon">
             </a>
