--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             <a href="#">Events</a>
             <a href="#">Products</a>
             <a href="#">Support</a>
-            <a href="javascript:void(0);" class="icon" onclick="myFunction()">
+            <a href="javascript:void(0);" class="icon" onclick="responsiveMenu()">
               <img id="iconHamburger" src="images/icon-hamburger.svg" alt="menu icon">
             </a>
           </div>
@@ -107,10 +107,10 @@
         <img src="images/logo.svg" class="logoBottom" alt="Loopstudios logo">
 
         <div class="socialMedia">
-          <a href=""><img src="images/icon-facebook.svg" alt="facebook icon"></a>
-          <a href=""><img src="images/icon-twitter.svg" alt="twitter icon"></a>
-          <a href=""><img src="images/icon-pinterest.svg" alt="pinterest icon"></a>
-          <a href=""><img src="images/icon-instagram.svg" alt="instagram icon"></a>
+          <a href="#"><img src="images/icon-facebook.svg" alt="facebook icon"></a>
+          <a href="#"><img src="images/icon-twitter.svg" alt="twitter icon"></a>
+          <a href="#"><img src="images/icon-pinterest.svg" alt="pinterest icon"></a>
+          <a href="#"><img src="images/icon-instagram.svg" alt="instagram icon"></a>
         </div>
 
         <div class="menuFooter">
@@ -130,7 +130,7 @@
     </footer>
   </div>
 
-  <script src="script.js"></script>
+  <script src="index.js"></script>
 </body>
 
 </html>
